[gd_scene load_steps=4 format=3 uid="uid://cix2chjt6toiq"]

[ext_resource type="Texture2D" uid="uid://ba2u0bavngk17" path="res://assets/interativos/savepoint.png" id="1_rv7jh"]
[ext_resource type="Script" uid="uid://dxd6dnbsom002" path="res://scripts/save.gd" id="1_yen23"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1k2n0"]
size = Vector2(64, 64)

[node name="save" type="Area2D"]
scale = Vector2(0.8, 0.8)
collision_layer = 128
collision_mask = 2
script = ExtResource("1_yen23")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rv7jh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1k2n0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 424.0
offset_top = 256.0
offset_right = 424.0
offset_bottom = 256.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 490.0
offset_bottom = 250.0
color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 2
offset_left = -4.57764e-05
offset_top = 40.0
offset_right = 490.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 25
text = "Você deseja salvar o jogo?"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="SaveButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 29.9999
offset_top = 140.0
offset_right = 211.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 25
text = "Sim"

[node name="CancelButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 280.0
offset_top = 140.0
offset_right = 461.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 25
text = "Não"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 0
offset_left = 424.0
offset_top = 256.0
offset_right = 424.0
offset_bottom = 256.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2/Control"]
layout_mode = 0
offset_right = 490.0
offset_bottom = 250.0
color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="Label" type="Label" parent="CanvasLayer2/Control"]
layout_mode = 2
offset_left = -4.57764e-05
offset_top = 40.0
offset_right = 490.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 25
text = "Jogo salvo com Sucesso!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ConfirmButton" type="Button" parent="CanvasLayer2/Control"]
layout_mode = 0
offset_left = 152.0
offset_top = 136.0
offset_right = 333.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 25
text = "OK"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="CanvasLayer/Control/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/Control/ConfirmButton" to="." method="_on_confirm_button_pressed"]
